# racing_game

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  Makefile  Map.txt  README.md  bank  cmake_install.cmake  vcpkg.json
Project_Races/: CMakeLists.txt  vcpkg.json
Project_Races/graphics_sdl/include/: define.h  sdl_init.h  tile.h  track.h  window.h
Project_Races/graphics_sdl/src/: main.cpp  sdl_init.cpp  track.cpp  window.cpp
Project_Races/src/: car.cpp  car.h
Project_Races/window/src/: window.cpp
graphics_sdl/include/: define.h  game.h  map.h  surface.h  tile.h  window.h
graphics_sdl/src/: area.cpp  camera.cpp  game.cpp  main.cpp  map.cpp  surface.cpp  track.cpp  window.cpp
include/: area.h  camera.h  car.h  car_image.h  define.h  game.h  map.h  surface.h  tile.h
oop/: CMakeLists.txt  bank.cpp  bank.h
src/: area.cpp  camera.cpp  car.cpp  car.h  car_image.cpp  game.cpp  main.cpp  map.cpp  surface.cpp
src_/: car.cpp  car.h  main.cpp
window/include/: glfw.h  window.h
window/src/: glfw.cpp  main_window.cpp
Аuction/: Auction.cpp  Auction.h  CMakeLists.txt
Аuction/include/: Auction.h
Аuction/src/: Auction.cpp  Lot.cpp  Users.cpp  main.cpp
